--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.H2OTrack"
         tools:targetApi="31">
         <activity
+            android:name=".AppActivity"
+            android:exported="false" />
+        <activity
             android:name=".AuthActivity"
             android:exported="false"
             android:label="@string/title_activity_auth"
